--- a/工作记录.md
+++ b/工作记录.md
@@ -3,6 +3,14 @@ a change-world game
 
 
 
+
+
+### 游戏历史
+
+
+
+2015-2016 游戏的前身出现
+
 2017-2018 游戏在线下诞生，并且在常州一中开始流行
 
 2019-2020 游戏的电子化方案不断地被讨论
@@ -12,6 +20,18 @@ a change-world game
 2020.7.1-2020.7.9 游戏电子化方案进入策划状态，创始人开始频繁见面商议，确定开发方案
 
 2020.7.10 游戏开发正式开工
+
+
+
+### 项目开工记录
+
+#### 2020.7.10 
+
+游戏开发正式开工
+
+#### 2020.7.11 
+
+完成了Player类族和Place类族，核心逻辑板块基本完成。Demo版本总体上基本完成。
 
 
 
