--- a/工作记录.md
+++ b/工作记录.md
@@ -31,7 +31,7 @@ a world-changing game
 
 #### 2020.7.11 
 
-完成了Player类族和Place类族，核心逻辑板块基本完成。Demo版本总体上基本完成。
+完成了Player类族和Place类族，核心逻辑板块基本完成。Demo版本总体上基本完成。基本功能实现。
 
 
 
